--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
   <section id="Portfolio">
       <h1 class="headings">Portfolio</h1>
       <div class="gallery">
-          <img src="ded.png"  alt="">
-          <img src="dedd.png"  alt="">
+          <img src="inlog.png"  alt="">
+          <img src="bi.png"  alt="">
           <img src="wew.png"  alt="">
-          <img src="qwq.png"  alt="">
+          <img src="qwq12.png"  alt="">
       </div>
   </section>
 
