--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="ded.PNG"  alt="">
         <img src="dedd.PNG"  alt="">
         <img src="wew.png"  alt="">
-        <img src="qwq.png"  alt="">
+        <img src="qwq1.png"  alt="">
       </div>
   </section>
 
