--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
   <section id="Portfolio">
       <h1 class="headings">Portfolio</h1>
       <div class="gallery">
-        <img src="ded.PNG"  alt="">
-        <img src="dedd.PNG"  alt="">
-        <img src="wew.png"  alt="">
-        <img src="qqq.png"  alt="">
+          <img src="ded.PNG"  alt="">
+          <img src="dedd.PNG"  alt="">
+          <img src="wew.png"  alt="">
+          <img src="qwq12.png"  alt="">
       </div>
   </section>
 
@@ -70,12 +70,14 @@
   </section>
  <section id="Contact">
      <h1 class="heading">Contact</h1>
-     <form action="" class="form">
-         <input type="text" name="name" class="input" placeholder="Enter ur name">
-         <input type="email" name="email" class="input" placeholder="enter ur email">
+     <form action="https://formsubmit.co/ddddabhbb@email.com" method="POST" class="form">
+         <input type="hidden" name="_subject" value="new email woo"> 
+         <input type="text" name="name" class="input" placeholder="Enter ur name" required>
+         <input type="email" name="email" class="input" placeholder="enter ur email" required>
+         <input type="hidden" name="_next" class="input" value="index2.html">
          <textarea name="msg" id="msg" cols="30" rows="10"
-         placeholder="enter ur massege"></textarea>
-         <input type="submit" value="Send" id="Send">
+         placeholder="enter ur massege"required></textarea>
+         <input type="submit" value="Send" id="Send"required>
      </form>
  </section>
 </body>
