--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </section>
  <section id="Contact">
      <h1 class="heading">Contact</h1>
-     <form action="https://formsubmit.co/ddddabhbb@email.com" method="POST" class="form">
+     <form action="https://formsubmit.co/ddddabhbb@gmail.com" method="POST" class="form">
          <input type="hidden" name="_subject" value="new email woo"> 
          <input type="text" name="name" class="input" placeholder="Enter ur name" required>
          <input type="email" name="email" class="input" placeholder="enter ur email" required>
