--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
          <input type="hidden" name="_subject" value="new email woo"> 
          <input type="text" name="name" class="input" placeholder="Enter ur name" required>
          <input type="email" name="email" class="input" placeholder="enter ur email" required>
-         <input type="hidden" name="_next" class="input" value="index2.html">
+         <input type="hidden" name="_next" class="input" value="https://abdul5511.github.io/index2.html">
          <textarea name="msg" id="msg" cols="30" rows="10"
          placeholder="enter ur massege"required></textarea>
          <input type="submit" value="Send" id="Send"required>
