--- a/index2.html
+++ b/index2.html
@@ -11,9 +11,7 @@
 <body>
     <div class="container">
         <h1>Thank you for contacting me. I will get back to you as soon as possible!</h1>
-        <p class="back">Go back to the <a href="index1.html">homepage</a>.</p>
-         <h1>Thank you for masseg</h1>
-        <p>we will contact with as soon as possibal.</p>
+        <p class="back">Go back to the <a href="index.html">homepage</a>.</p>
     </div>
 </body>
 </html>
