--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section id="About">
           <h1 class="heading">About Me</h1>
           <div id="pic">
-          <img src="ee.jpg" alt="">
+          <img src="ee.png" alt="">
           <div id="intro">
               <h2>Abdul Atassi</h2>
               <p> i am abdul 33 years i come from syria i live now in nederland for 3 yeas 
