--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
           <div class="box">
               <img src="aa.jpg" alt="">
               <h1 class="name">Website </h1>
-              <p> i have intersting in web design and make i have self study for 6month </p>
+              <p> i have intersting in web design and make website i have self study.</p>
           </div>
           <div class="box">
             <img src="aa.jpg" alt="">
             <h1 class="name">Coding</h1>
-            <p> i have self study for 3 month Coding i use Html Css and Python </p>
+            <p> i have self study i use Html Css and Python. </p>
       </div>
       <div class="box">
         <img src="aa.jpg" alt="">
         <h1 class="name">Data Lab</h1>
-        <p> in this time i busy to follow traning im Datalab its work woth office and powerbi and python</p>
+        <p> in this time i busy to follow traning in Datalab its work with office and powerbi and python.</p>
         </div>
 
     </div>
