--- a/Thuis.html
+++ b/Thuis.html
@@ -266,7 +266,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-2">
                     <div class="u-container-layout u-valign-top u-container-layout-2">
                       <div class="u-form u-form-1">
-                        <form action="https://formsubmit.co/ddddabhbb@gmail.com" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="mailchimp" name="form-5">
+                        <form action="#https://formspree.io/f/mvolkqnl" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="custom" name="form-5">
                           <div class="u-form-group u-form-name u-form-group-1">
                             <label for="name-5359" class="u-form-control-hidden u-label">Name</label>
                             <input type="text" placeholder="FirstName" id="name-5359" name="fname" class="u-border-1 u-border-grey-30 u-input u-input-rectangle" required="">
@@ -279,7 +279,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                             <label for="message-5359" class="u-form-control-hidden u-label">Address</label>
                             <textarea placeholder="message" rows="4" cols="50" id="message-5359" name="message" class="u-border-1 u-border-grey-30 u-input u-input-rectangle" required=""></textarea>
                           </div>
-                          <div class="u-form-group u-form-submit u-form-group-4">
+                          <div class="u-align-left u-form-group u-form-submit u-form-group-4">
                             <a href="#" class="u-btn u-btn-submit u-button-style">Submit</a>
                             <input type="submit" value="submit" class="u-form-control-hidden">
                           </div>
