--- a/Thuis.html
+++ b/Thuis.html
@@ -94,7 +94,7 @@ borders: top right bottom left !important; border-color: #478ac9 !important; bor
                 <p class="u-gallery-text"></p>
               </div>
               <style data-mode="XL"></style>
-              <style data-mode="LG"></style>
+              <style data-mode="LG" data-visited="true"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
               <style data-mode="XS"></style>
@@ -108,7 +108,7 @@ borders: top right bottom left !important; border-color: #478ac9 !important; bor
                 <p class="u-gallery-text"></p>
               </div>
               <style data-mode="XL"></style>
-              <style data-mode="LG"></style>
+              <style data-mode="LG" data-visited="true"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
               <style data-mode="XS"></style>
@@ -122,7 +122,7 @@ borders: top right bottom left !important; border-color: #478ac9 !important; bor
                 <p class="u-gallery-text"></p>
               </div>
               <style data-mode="XL"></style>
-              <style data-mode="LG"></style>
+              <style data-mode="LG" data-visited="true"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
               <style data-mode="XS"></style>
@@ -136,7 +136,7 @@ borders: top right bottom left !important; border-color: #478ac9 !important; bor
                 <p class="u-gallery-text"></p>
               </div>
               <style data-mode="XL"></style>
-              <style data-mode="LG"></style>
+              <style data-mode="LG" data-visited="true"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
               <style data-mode="XS"></style>
@@ -150,7 +150,7 @@ borders: top right bottom left !important; border-color: #478ac9 !important; bor
                 <p class="u-gallery-text"></p>
               </div>
               <style data-mode="XL"></style>
-              <style data-mode="LG"></style>
+              <style data-mode="LG" data-visited="true"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
               <style data-mode="XS"></style>
@@ -199,21 +199,21 @@ borders: top right bottom left !important; border-color: #478ac9 !important; bor
           <div class="u-repeater u-repeater-1">
             <div class="u-border-3 u-border-palette-1-light-3 u-container-style u-list-item u-opacity u-opacity-95 u-palette-1-dark-2 u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-1">
-                <img alt="" class="u-border-2 u-border-grey-75 u-image u-image-default u-image-7" data-image-width="539" data-image-height="957" src="images/Knipsel6.PNG">
+                <img alt="" class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xs u-border-2 u-border-grey-75 u-image u-image-default u-image-7" data-image-width="539" data-image-height="957" src="images/Knipsel6.PNG">
                 <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-3">Weegschaal App</h3>
                 <p class="u-custom-font u-font-montserrat u-text u-text-4">Het wordt gebruikt om het gewicht elke dag, elke maand of elke week te registreren, en u kunt ook het vetpercentage in het lichaam berekenen om de veranderingen in de week, maand en jaar te kennen.</p>
               </div>
             </div>
             <div class="u-border-3 u-border-palette-1-light-3 u-container-style u-list-item u-opacity u-opacity-95 u-palette-1-dark-2 u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-2">
-                <img alt="" class="u-border-2 u-border-grey-75 u-image u-image-default u-image-8" data-image-width="542" data-image-height="958" src="images/Knipsel5.PNG">
+                <img alt="" class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xs u-border-2 u-border-grey-75 u-image u-image-default u-image-8" data-image-width="542" data-image-height="958" src="images/Knipsel5.PNG">
                 <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-5">Weegschaal App</h3>
                 <p class="u-custom-font u-font-montserrat u-text u-text-6">De front End Van Welkom Pagina.</p>
               </div>
             </div>
             <div class="u-border-3 u-border-palette-1-light-3 u-container-style u-list-item u-opacity u-opacity-95 u-palette-1-dark-2 u-repeater-item u-list-item-3">
               <div class="u-container-layout u-similar-container u-container-layout-3">
-                <img alt="" class="u-border-2 u-border-grey-75 u-image u-image-default u-image-9" data-image-width="539" data-image-height="962" src="images/Knipsel4.PNG">
+                <img alt="" class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xs u-border-2 u-border-grey-75 u-image u-image-default u-image-9" data-image-width="539" data-image-height="962" src="images/Knipsel4.PNG">
                 <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-7">Daat App</h3>
                 <p class="u-custom-font u-font-montserrat u-text u-text-8">De inlogin pagina van Daat personeel</p>
               </div>
